--- a/Killmonger.html
+++ b/Killmonger.html
@@ -41,29 +41,39 @@
         </nav>
     </header>
 
-    <main class="container mt-4">
-        <div class="text-center">
+    <main class="container-fluid row d-flex justify-content-center align-items-center pt-3">
+        <div class="row d-flex justify-content-center align-items-center">
             <img src="Img/Killmonger-768x432.jpg" class="img-fluid" id="Km-Image" />
         </div>
-        <div class="container mt-4">
+        <div class="col-12">
             <h1 class="KM-H1">KillMonger</h1>
         </div>
-        <div></div>
-        <h2 class="KM-H2">Who is Killmonger?</h2>
-        <p>
-            Erik Killmonger (né N'Jadaka) is a supervillain appearing in American comic books published by Marvel
-            Comics. Created by Don McGregor and Rich Buckler, he first appeared in Jungle Action #6 (September 1973).
-            The character is commonly depicted as a skilled hunter and mercenary born in the fictional African nation of
-            Wakanda, who holds a grudge against the country and its people after his biological parents were killed when
-            he was young. Raised outside of Wakanda, he eventually returns as a revolutionary leader and terrorist to
-            exact his revenge, and repeatedly challenges the nation's king and protector, Black Panther, who becomes his
-            most prominent adversary.
-        </p>
-        <p>
-            he character has been adapted from the comics into several other forms of media, such as television series
-            and video games. Michael B. Jordan portrayed the character in the Marvel Cinematic Universe films Black
-            Panther (2018) and Black Panther: Wakanda Forever (2022), and later voiced an alternate reality version in
-            the animated series What If...? (2021).
+        <div class="col-12 text-center col-md-6 text-md-start">
+            <h2 class="KM-H2">Who is Killmonger?</h2>
+            <article>Erik Killmonger (né N'Jadaka) is a supervillain appearing in American comic books published by
+                Marvel
+                Comics. Created by Don McGregor and Rich Buckler, he first appeared in Jungle Action #6 (September
+                1973).
+                The character is commonly depicted as a skilled hunter and mercenary born in the fictional African
+                nation of
+                Wakanda, who holds a grudge against the country and its people after his biological parents were killed
+                when
+                he was young. Raised outside of Wakanda, he eventually returns as a revolutionary leader and terrorist
+                to
+                exact his revenge, and repeatedly challenges the nation's king and protector, Black Panther, who becomes
+                his
+                most prominent adversary.</article>
+            <article>The character has been adapted from the comics into several other forms of media, such as
+                television series and video games. Michael B. Jordan portrayed the character in the Marvel Cinematic
+                Universe films Black Panther (2018) and Black Panther: Wakanda Forever (2022), and later voiced an
+                alternate reality version in the animated series What If...? (2021).</article>
+        </div>
+        <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
+            <img src="/Img/killmonger-1659022582.png" class="img-fluid" />
+        </div>
+        <div>
+
+        </div>
         </p>
         <h2 class="KM-H2">Bio</h2>
         <p>
@@ -130,7 +140,7 @@
             Avengers to stage a coup d'état, along with Baron Macabre. He was defeated and
             killed, until the Mandarin claimed his body.
         </p>
-        <div class="text-center">
+        <div class="col">
             <img src="/Img/Screenshot 2023-09-25 185932.png" class="img-fluid" id="Km-Image" />
         </div>
         <a href="/marvel.html" class="btn btn-success">
