--- a/marvel.html
+++ b/marvel.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Homework</title>
+        <title>Marvel</title>
 
         <!-- Bootstrap CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -89,56 +89,73 @@
                     <h2 class="hero-text">List of Heroes</h2>
                 </div>
                 <div class="row g-3 flex justify-content-center align-items-center">
-                    <div class="row row-cols-4 container  d-flex justify-content-center align-items-center bg-dark text-light">
+                    <div
+                        class="row row-cols-4 container d-flex justify-content-center align-items-center bg-dark text-light">
                         <div class="col">Superhero</div>
                         <div class="col">Alter Ego</div>
                         <div class="col text-md-center">Power</div>
                         <div class="col text-md-center">Picture</div>
                     </div>
-                <!--Spiderman-->
-                   <div class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center bg-secondary-subtle">
-                        <div class="col"><a herf="https://en.wikipedia.org/wiki/Spider-Man">Spider Man</a></div>
+                    <!--Spiderman-->
+                    <div
+                        class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center bg-secondary-subtle">
+                        <div class="col">
+                            <a href="https://en.wikipedia.org/wiki/Spider-Man">Spider Man</a>
+                        </div>
                         <div class="col">Peter Parker</div>
                         <div class="col">Web slinging, climbs walls, spidey senses</div>
                         <div class="col">
-                            <img src="/Img/spidey.jpeg" class="img-fluid" />
+                            <a href="https://en.wikipedia.org/wiki/Spider-Man"><img src="/Img/spidey.jpeg"
+                                    class="img-fluid" /></a>
                         </div>
-                   </div>
-                <!--Powerman-->
+                    </div>
+                    <!--Powerman-->
                     <div class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center ">
-                        <div class="col">Powerman</div>
+                        <div class="col">
+                            <a href="https://en.wikipedia.org/wiki/Luke_Cage">Powerman</a>
+                        </div>
                         <div class="col">Luke Cage</div>
                         <div class="col">Unbreakable skin, super strength, really cool</div>
                         <div class="col">
-                            <img src="/Img/lukecage.png" class="img-fluid" />
+                            <a href="https://en.wikipedia.org/wiki/Luke_Cage"><img src="/Img/lukecage.png"
+                                    class="img-fluid" /></a>
                         </div>
-                   </div>
-                <!--Ironman-->
-                    <div class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center bg-secondary-subtle">
-                        <div class="col">Iron Man</div>
+                    </div>
+                    <!--Ironman-->
+                    <div
+                        class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center bg-secondary-subtle">
+                        <div class="col">
+                            <a href="https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man">Iron Man</a>
+                        </div>
                         <div class="col">Tony Stark</div>
                         <div class="col">Mech suits, super genius, billioniar philanthropist</div>
                         <div class="col">
-                            <img src="/Img/ironman-bleeding-edge.jpg" class="img-fluid" />
+                            <a href="https://marvelcinematicuniverse.fandom.com/wiki/Iron_Man"><img
+                                    src="/Img/ironman-bleeding-edge.jpg" class="img-fluid" /></a>
                         </div>
-                   </div >
-                <!--Captain America-->
+                    </div>
+                    <!--Captain America-->
                     <div class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center ">
-                        <div class="col">Captain America</div>
+                        <div class="col">
+                            <a href="https://en.wikipedia.org/wiki/Captain_America">Captain America</a>
+                        </div>
                         <div class="col">Steve Roger</div>
                         <div class="col">Super soldier, super Strength, super patriotic</div>
                         <div class="col">
-                            <img src="/Img/ClassicCap.png" class="img-fluid" />
+                            <a href="https://en.wikipedia.org/wiki/Captain_America"><img src="/Img/ClassicCap.png"
+                                    class="img-fluid" /></a>
+
                         </div>
                     </div>
-                <!--Killmonger-->
-                    <div class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center bg-secondary-subtle">   
+                    <!--Killmonger-->
+                    <div
+                        class="row row-cols-4 container p-3 d-flex justify-content-center align-items-center bg-secondary-subtle">
                         <div class="col"><a href="Killmonger.html">Kill Monger</a></div>
                         <div class="col">Erik Stevens (N'Jadaka)</div>
                         <div class="col">Expert martial artist, Superhuman Strength and intellect, Skilled
-                        businessman (shewed)</div>
+                            businessman (shewed)</div>
                         <div class="col">
-                            <a href="Killmonger.html">
+                            <a href="https://en.wikipedia.org/wiki/Erik_Killmonger">
                                 <img src="/Img/king_killmonger.jpg" class="img-fluid" />
                             </a>
                         </div>
